# steadifi-contracts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NewFile  README.md  package-lock.json  todo list
.github/workflows/: cargo_audit.yml  integration_tests.yml  tests.yml
artifacts/: checksums.txt  checksums_intermediate.txt  collateral_manager.wasm  cw20_base.wasm  mint_authority.wasm  oracle.wasm
contracts/collateral_manager/: Cargo.toml  helpers.ts
contracts/collateral_manager/.cargo/: config
contracts/collateral_manager/examples/: collateral_manager_schema.rs
contracts/collateral_manager/schema/: balance_response.json  execute_msg.json  query_msg.json
contracts/collateral_manager/src/: contract.rs  contract_unittests.rs  error.rs  helper.rs  lib.rs  msg.rs  state.rs
contracts/cw20-base/.cargo/: config
contracts/cw20-base/src/: contract.rs  lib.rs  state.rs
contracts/mint_authority/: Cargo.toml
contracts/mint_authority/.cargo/: config
contracts/mint_authority/examples/: mint_authority_schema.rs
contracts/mint_authority/schema/: execute_msg.json  instantiate_msg.json  mint_authority_info.json  query_msg.json
contracts/mint_authority/src/: contract.rs  msg.rs  state.rs
contracts/oracle/: Cargo.toml
contracts/oracle/examples/: schema.rs
contracts/oracle/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/oracle_manager/: Cargo.toml
contracts/oracle_manager/.cargo/: config
contracts/oracle_manager/examples/: schema.rs
contracts/oracle_manager/schema/: execute_msg.json  (+1 more)
scripts/: build_release.sh  build_schema.sh
tests/: .env.example  .eslintrc.json  .gitignore  README.md  example.test.ts  globalSetup.ts  globalTeardown.ts  hey.test.ts  jest.config.js  package-lock.json  package.json  setupTests.ts
tests/utils/: context.ts  contract.ts  testAccounts.ts  txResult.ts  utils.ts
(+4 files in other folders)
