[package]
name = "collateral_manager"
version = "0.0.0"
authors = ["Andisheh Amrollahi"]
edition = "2018"
description = "Collateral manager for Steadifi"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw20 = { path = "../../packages/cw20", version = "0.9.0" }
cw0 = { path = "../../packages/cw0", version = "0.9.0" }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.9.0" }
cosmwasm-std = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
steadifi = { path = "../../packages/steadifi", version = "0.0.0" }
cw-controllers = { path = "../../packages/controllers", version = "0.9.0" }
terra-cosmwasm = {version = "2.2.0"}
[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }

